--- a/Lessons/29/index.html
+++ b/Lessons/29/index.html
@@ -4,34 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Object Model (DOM)</title>
+    <title>Lesson 30</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="task1">
-            <button type="button" onclick="addList()">Song list</button>
-            <br>
-            <br>
 
-        </div>
+    <div id="task1">Any text</div>
+    <br>
 
-        <div class="task2">
-            <button type="button" onclick="myWindow()">Window</button>
-            <br>
-            <br>
-            <div class="task2_rez"></div>
-        </div>
+    <div id="sort_table"></div>
+    <br>
 
-        <div class="task3">
-            <a href="task3.html">TASK 3</a>
-        </div>
+    <div id="task3" style="height: 100px; width: 400px;">
+        <span>Nikolaev - a city in the southern part of Ukraine, the administrative
+            center of the Nikolaev region. One of the largest economic centers of the
+            south of Ukraine</span>
+        <div id="move"></div>
     </div>
 
-    <div id="task1_rez"></div>
-
-    <script src="assets/js/main2.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
