--- a/index.html
+++ b/index.html
@@ -93,42 +93,47 @@
                 <li><a href="Lessons/15/1/index.html"></a></li>
             </ul>
         </li>
-        <li>Lesson-22 <span>JavaScript basics</span>
+        <li>Lesson-21 <span>JavaScript basics</span>
+            <ul>
+                <li><a href="Lessons/21/index.html">Site</a></li>
+            </ul>
+        </li>
+        <li>Lesson-22 <span>Data types and operators</span>
             <ul>
                 <li><a href="Lessons/22/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-23 <span>Data types and operators</span>
+        <li>Lesson-23 <span>Cycles</span>
             <ul>
                 <li><a href="Lessons/23/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-24 <span>Cycles</span>
+        <li>Lesson-24 <span>Functions</span>
             <ul>
                 <li><a href="Lessons/24/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-25 <span>Functions</span>
+        <li>Lesson-25 <span>The objects</span>
             <ul>
                 <li><a href="Lessons/25/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-26 <span>The objects</span>
+        <li>Lesson-26 <span>Arrays</span>
             <ul>
                 <li><a href="Lessons/26/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-27 <span>Arrays</span>
+        <li>Lesson-27 <span>Classes</span>
             <ul>
                 <li><a href="Lessons/27/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-28 <span>Classes</span>
+        <li>Lesson-28 <span>DOM</span>
             <ul>
                 <li><a href="Lessons/28/index.html">Site</a></li>
             </ul>
         </li>
-        <li>Lesson-29 <span>DOM</span>
+        <li>Lesson-29 <span>Events JavaScript</span>
             <ul>
                 <li><a href="Lessons/29/index.html">Site</a></li>
             </ul>
