--- a/Lessons/24/index.html
+++ b/Lessons/24/index.html
@@ -4,85 +4,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cycles</title>
+    <title>Functions</title>
 </head>
 
 <body>
     <fieldset>
         <legend>Task 1</legend>
-        <label>Enter range of numbers</label>
-        <input type="text" id="task1_var1" placeholder="From">
-        <input type="text" id="task1_var2" placeholder="To">
-        <button type="button" onclick="task1()">Count</button>
+        <label>Enter two numbers</label>
+        <br>
+        <input type="text" id="task1_var1" placeholder="First number">
+        <input type="text" id="task1_var2" placeholder="Second number">
+        <br>
+        <button type="button" onclick="task1()">Check</button>
         <p>Sum of numbers in a given range: <span id="task1_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 2</legend>
-        <label>Enter two numbers</label>
-        <input type="text" id="task2_var1" placeholder="First">
-        <input type="text" id="task2_var2" placeholder="Second">
-        <button type="button" onclick="task2()">Find</button>
-        <p>Greatest common factor: <span id="task2_rez"></span></p>
+        <label>Enter a number</label>
+        <br>
+        <input type="text" id="task2_var" placeholder="Your number">
+
+        <br>
+        <button type="button" onclick="task2()">Check</button>
+        <p>Factorial numbers: <span id="task2_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 3</legend>
-        <label>Enter numbers</label>
-        <input type="text" id="task3_var" placeholder="Yor number">
-        <button type="button" onclick="task3()">Find</button>
-        <p>All divisors of this number: <span id="task3_rez"></span></p>
+        <label>Enter three numbers</label>
+        <br>
+        <input type="text" id="task3_var1" placeholder="*" style="width: 15px;">
+        <input type="text" id="task3_var2" placeholder="*" style="width: 15px;">
+        <input type="text" id="task3_var3" placeholder="*" style="width: 15px;">
+        <br>
+        <button type="button" onclick="task3()">Change</button>
+        <p>Combined number: <span id="task3_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 4</legend>
-        <label>Enter numbers</label>
-        <input type="text" id="task4_var" placeholder="Yor number" style="width: 100%;">
-        <button type="button" onclick="task4()">Count</button>
-        <p>The number of digits in the entered number: <span id="task4_rez"></span></p>
+        <label>Length and width for rectangle, or only length for square</label>
+        <br>
+        <input type="text" id="task4_var1" placeholder="Length">
+        <input type="text" id="task4_var2" placeholder="Width">
+        <br>
+        <button type="button" onclick="task4()">Check</button>
+        <p>Area of the figure: <span id="task4_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 5</legend>
-        <label>Enter numbers</label>
-        <button type="button" onclick="task5()">Click</button>
+        <label>Enter a number</label>
+        <br>
+        <input type="text" id="task5_var" placeholder="Your number">
 
-        <p>Your numbers: <span id="task4_rez6"></span></p>
-        <p>Positive numbers: <span id="task4_rez1"></span></p>
-        <p>Negative numbers: <span id="task4_rez2"></span></p>
-        <p>Zeros: <span id="task4_rez3"></span></p>
-        <p>Even numbers: <span id="task4_rez4"></span></p>
-        <p>Odd numbers: <span id="task4_rez5"></span></p>
+        <br>
+        <button type="button" onclick="task5()">Check</button>
+        <p>Perfect number: <span id="task5_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 6</legend>
-        <label>Calculator</label>
-        <button type="button" onclick="task6()">GO</button>
+        <label>Enter a range of numbers</label>
+        <br>
+        <input type="text" id="task6_var1" placeholder="From">
+        <input type="text" id="task6_var2" placeholder="To">
+        <br>
+        <button type="button" onclick="task6()">Check</button>
+        <p>Perfect numbers from your range: <span id="task6_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 7</legend>
-        <label>Enter number and shift</label>
-        <input type="text" id="task7_var1" placeholder="Number">
-        <input type="text" id="task7_var2" placeholder="Shift">
-        <button type="button" onclick="task7()">Change</button>
-        <p>Modified number: <span id="task7_rez"></span></p>
+        <label>Enter time</label>
+        <br>
+        <input type="text" id="task7_hours" placeholder="hours" style="width: 50px;">
+        <input type="text" id="task7_minutes" placeholder="minutes" style="width: 50px;">
+        <input type="text" id="task7_seconds" placeholder="seconds" style="width: 50px;">
+        <br>
+        <button type="button" onclick="task7()">Withdraw</button>
+        <p>Your time: <span id="task7_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 8</legend>
-        <label>Display multiplication table</label>
-        <button type="button" onclick="task8()">GO</button>
+        <label>Time in seconds</label>
+        <br>
+        <input type="text" id="task8_hourd" placeholder="hours" style="width: 50px;">
+        <input type="text" id="task8_minutes" placeholder="minutes" style="width: 50px;">
+        <input type="text" id="task8_seconds" placeholder="seconds" style="width: 50px;">
+        <br>
+        <button type="button" onclick="task8()">Count</button>
+        <p>In seconds: <span id="task8_rez"></span></p>
     </fieldset>
 
     <fieldset>
         <legend>Task 9</legend>
-        <label>Display multiplication table</label>
-        <button type="button" onclick="task9('mult_table')">GO</button>
+        <label>Number of seconds</label>
         <br>
+        <input type="text" id="task9_var" placeholder="Seconds">
         <br>
-        <div id="mult_table" style="display: flex; flex-wrap: wrap;"></div>
+        <button type="button" onclick="task9()">Change</button>
+        <p>Time: <span id="task9_rez"></span></p>
+    </fieldset>
+
+    <fieldset>
+        <legend>Task 10</legend>
+        <label>Time one</label>
+        <br>
+        <input type="text" id="task10_hours1" placeholder="hours" style="width: 50px;">
+        <input type="text" id="task10_minutes1" placeholder="minutes" style="width: 50px;">
+        <input type="text" id="task10_seconds1" placeholder="seconds" style="width: 50px;">
+        <br>
+        <label>Time two</label>
+        <br>
+        <input type="text" id="task10_hours2" placeholder="hours" style="width: 50px;">
+        <input type="text" id="task10_minutes2" placeholder="minutes" style="width: 50px;">
+        <input type="text" id="task10_seconds2" placeholder="seconds" style="width: 50px;">
+        <br>
+        <button type="button" onclick="task10()">Count</button>
+        <p>Difference: <span id="task10_rez"></span></p>
     </fieldset>
 
     <script src="assets/js/main.js"></script>
