--- a/Lessons/26/index.html
+++ b/Lessons/26/index.html
@@ -4,72 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The objects</title>
+    <title>Arrays</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <div class="cars">
-        <div class="cars_first">
-            <p class="title">Vehicle Information</p>
+    <div class="task_1">
+        <div class="shop">
+            <h2>Shopping list</h2>
+            <ol id="shop_list"></ol>
+        </div>
+        <div class="shop">
+            <h2>Adding a product to the list</h2>
+            <input type="text" id="prod_name" placeholder="Prodact name">
             <br>
-            <button type="button" onclick="drawInf()">Receive</button>
-            <div id="draw_car"></div>
+            <br>
+            <input type="text" id="prod_amou" placeholder="Number of products">
+            <br>
+            <br>
+            <button type="button" onclick="addProduct()">Add to list</button>
         </div>
-        <div class="cars_second">
-            <fieldset>
-                <p class="title">Calculation of time to overcome the distance</p>
-                <br>
-                <label>Enter distance</label>
-                <br>
-                <input type="text" id="task2_var" placeholder="Kilometers">
-                <br>
-                <br>
-                <button type="button" onclick="neenedTime()">Count</button>
-                <p>Time needed: <span id="task2_rez"></span></p>
-            </fieldset>
+        <div class="shop">
+            <h2>Mark purchased goods</h2>
+            <input type="text" id="prod_name_add" placeholder="Prodact name">
+            <br>
+            <br>
+            <button type="button" onclick="addPursh()">Add to purchased</button>
         </div>
     </div>
-    <div class="footer">
-        <div class="fraction">
-            <fieldset>
-                <legend>Task 2</legend>
-                <br>
-                <button type="button" onclick="addFraction()">View information</button>
-                <div id="draw_frac"></div>
-            </fieldset>
+
+    <div class="task_2">
+        <div class="check">
+            <h2>Printout of check</h2>
+            <button type="button" onclick="printeCheck()">Printout</button>
+            <br>
+            <br>
+            <div id="print_ckeck"></div>
         </div>
-        <div class="time">
-            <fieldset>
-                <legend>Task 3</legend>
-                <button type="button" onclick="drawTime()">View information</button>
-                <br>
-                <div id="time_inf"></div>
-
-                <label>Number of seconds</label>
-                <input type="text" id="change_sec" placeholder="Seconds">
-                <button type="button" onclick="incSec()">Increase</button>
-                <button type="button" onclick="redSec()">Reduce</button>
-                <br>
-                <br>
-
-                <label>Number of minutes</label>
-                <input type="text" id="change_min" placeholder="Minutes">
-                <button type="button" onclick="incMin()">Increase</button>
-                <button type="button" onclick="redMin()">Reduce</button>
-                <br>
-                <br>
-
-                <label>Number of hours</label>
-                <input type="text" id="change_hours" placeholder="Hours">
-                <button type="button" onclick="incHours()">Increase</button>
-                <button type="button" onclick="redHours()">Reduce</button>
-                <br>
-                <br>
-
-            </fieldset>
+        <div class="check">
+            <h2>Total purchase amount</h2>
+            <button type="button" onclick="totalCheck()">Calculate</button>
+            <br>
+            <br>
+            <div id="total_ckeck"></div>
+        </div>
+        <div class="check">
+            <h2>The most expensive product</h2>
+            <button type="button" onclick="mostExProd()">Find</button>
+            <br>
+            <br>
+            <div id="most_exp"></div>
+        </div>
+        <div class="check">
+            <h2>The average cost of one item per check</h2>
+            <button type="button" onclick="averagePrice()">Find</button>
+            <br>
+            <br>
+            <div id="aver_price"></div>
         </div>
     </div>
+    <div class="task_4">
+        <div class="academy">
+            <h2>Academy</h2>
+            <button type="button" onclick="drawAcademyList()">Show Audience list</button>
+            <br>
+            <br>
+            <div id="academy_list"></div>
+        </div>
+        <div class="academy_second">
+            <h2>Enter the name of the faculty</h2>
+            <input type="text" id="faculty" placeholder="Faculty">
+            <br>
+            <br>
+            <button type="button" onclick="showFaculty()">Show suitable</button>
+            <br>
+            <br>
+            <div id="faculty_list"></div>
+        </div>
+        <div class="academy">
+            <h2>Sort audiences by number of seats</h2>
+            <button type="button" onclick="sortAcademyList()">Change</button>
+            <br>
+            <br>
+            <div id="academy_list_num"></div>
+        </div>
+        <div class="academy">
+            <h2>Sort audiences by name</h2>
+            <button type="button" onclick="sortAudience()">Change</button>
+            <br>
+            <br>
+            <div id="academy_list_name"></div>
+        </div>
+    </div>
+
     <script src="assets/js/main.js"></script>
 </body>
 
