--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../HomeWorks/assets/css/style.css">
+    <link rel="stylesheet" href="../Lessons/assets/css/style.css">
 </head>
 
 <body>
@@ -136,6 +136,11 @@
         <li>Lesson-29 <span>Events JavaScript</span>
             <ul>
                 <li><a href="Lessons/29/index.html">Site</a></li>
+            </ul>
+        </li>
+        <li>Lesson-30 <span>Familiarity with jQuery. Manipulation of elements and events</span>
+            <ul>
+                <li><a href="Lessons/30/index1.html">Site</a></li>
             </ul>
         </li>
     </ol>
