--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
                 <li><a href="Lessons/30/index1.html">Site</a></li>
             </ul>
         </li>
+        <li>Lesson-31 <span>Slick Slider is the most versatile slider plugin</span>
+            <ul>
+                <li><a href="Lessons/31/index.html">Site</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
