--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                 <li><a href="Lessons/31/index.html">Site</a></li>
             </ul>
         </li>
+        <li>Lesson-32 <span>AJAX</span>
+            <ul>
+                <li><a href="Lessons/32/index.html">Site</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
