--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                 <li><a href="Lessons/32/index.html">Site</a></li>
             </ul>
         </li>
+        <li>Lesson-33 <span>Customized cards</span>
+            <ul>
+                <li><a href="Lessons/33/index.html">Site</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
