--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
                 <li><a href="Lessons/33/index.html">Site</a></li>
             </ul>
         </li>
+        <li>Lesson-35 <span>CSS animations</span>
+            <ul>
+                <li><a href="Lessons/35/1/index.html">Cards 1</a></li>
+            </ul>
+            <ul>
+                <li><a href="Lessons/35/1 + js/index.html">Cards 2</a></li>
+            </ul>
+            <ul>
+                <li><a href="Lessons/35/2/index.html">Cahee</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
