--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
                 <li><a href="Lessons/35/2/index.html">Cahee</a></li>
             </ul>
         </li>
+        <li>Lesson-36 <span>CSS Grid Layout</span>
+            <ul>
+                <li><a href="Lessons/36/1/08_hw_2.html">Site 1</a></li>
+            </ul>
+            <ul>
+                <li><a href="Lessons/36/2/index.html">Site 2</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
