--- a/index.html
+++ b/index.html
@@ -177,6 +177,21 @@
                 <li><a href="Lessons/36/2/index.html">Site 2</a></li>
             </ul>
         </li>
+        <li>Lesson-39 <span>Meet Vue.js.</span>
+            <ul>
+                <li><a href="Lessons/39/index.html">Site</a></li>
+            </ul>
+        </li>
+        <li>Lesson-40 <span>Modifiers, events and displays in Vue.js.</span>
+            <ul>
+                <li><a href="Lessons/40/index.html">Site</a></li>
+            </ul>
+        </li>
+        <li>Lesson-41 <span>Vue.js components</span>
+            <ul>
+                <li><a href="Lessons/41/index.html">Site</a></li>
+            </ul>
+        </li>
     </ol>
 </body>
 
