--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <li>Lesson-14 <span>Work with pre- and postprocessors</span>
             <ul>
                 <li><a href="#"></a></li>
-                <li><a href="Lessons/14/2/index.html"></a></li>
+                <li><a href="Lessons/14/2/index.html">Cahee</a></li>
             </ul>
         </li>
         <li>Lesson-15 <span>Responsive web design</span>
             <ul>
                 <li><a href="#"></a></li>
-                <li><a href="Lessons/15/1/index.html">Cahhe</a></li>
+                <li><a href="Lessons/15/1/index.html">Cahee</a></li>
             </ul>
         </li>
         <li>Lesson-21 <span>JavaScript basics</span>
