--- a/Lessons/15/1/index.html
+++ b/Lessons/15/1/index.html
@@ -29,13 +29,29 @@
                 </div>
                 <nav>
                     <ul class="menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">About</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">Services</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">Gallery</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">Blog</a></li>
+                        <li class="nav_item"><a href="#" class="nav_link">Contact</a></li>
                     </ul>
+
+                    <div class="menu-icon" id="menu_toggle">
+                        <div class="menu-icon-line"></div>
+                    </div>
+
+                    <div class="mobile-nav" id="mobile-nav">
+                        <div class="mobile-nav__title">Menu</div>
+                        <ul class="mobile-nav__list">
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Home</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">About</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Services</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Gallery</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Blog</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Contact</a></li>
+                        </ul>
+                    </div>
                 </nav>
             </header>
             <div class="info">
@@ -192,6 +208,8 @@
             <div class="right">Made with <span>love</span> by Auskteez</div>
         </footer>
     </div>
+
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
