--- a/Lessons/15/1/index.html
+++ b/Lessons/15/1/index.html
@@ -30,11 +30,11 @@
                 <nav>
                     <ul class="menu">
                         <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                        <li class="nav_item"><a href="#" class="nav_link">About</a></li>
-                        <li class="nav_item"><a href="#" class="nav_link">Services</a></li>
-                        <li class="nav_item"><a href="#" class="nav_link">Gallery</a></li>
-                        <li class="nav_item"><a href="#" class="nav_link">Blog</a></li>
-                        <li class="nav_item"><a href="#" class="nav_link">Contact</a></li>
+                        <li class="nav_item"><a href="#bottom" class="nav_link">About</a></li>
+                        <li class="nav_item"><a href="#services" class="nav_link">Services</a></li>
+                        <li class="nav_item"><a href="#gallery" class="nav_link">Gallery</a></li>
+                        <li class="nav_item"><a href="#blog" class="nav_link">Blog</a></li>
+                        <li class="nav_item"><a href="#contact" class="nav_link">Contact</a></li>
                     </ul>
 
                     <div class="menu-icon" id="menu_toggle">
@@ -45,11 +45,11 @@
                         <div class="mobile-nav__title">Menu</div>
                         <ul class="mobile-nav__list">
                             <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Home</a></li>
-                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">About</a></li>
-                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Services</a></li>
-                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Gallery</a></li>
-                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Blog</a></li>
-                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Contact</a></li>
+                            <li class="mobile-nav__item"><a href="#bottom" class="mobile-nav__link">About</a></li>
+                            <li class="mobile-nav__item"><a href="#services" class="mobile-nav__link">Services</a></li>
+                            <li class="mobile-nav__item"><a href="#gallery" class="mobile-nav__link">Gallery</a></li>
+                            <li class="mobile-nav__item"><a href="#blog" class="mobile-nav__link">Blog</a></li>
+                            <li class="mobile-nav__item"><a href="#contact" class="mobile-nav__link">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <div class="part_2">
+    <div class="part_2" id="services">
         <div class="main">
             <div class="service">
                 <ul>
@@ -106,7 +106,7 @@
         </div>
     </div>
 
-    <div class="part_3">
+    <div class="part_3" id="gallery">
         <div class="header">
             <h2>Gallery</h2>
             <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor
@@ -135,7 +135,7 @@
         <div class="berry"></div>
     </div>
 
-    <div class="part_5">
+    <div class="part_5" id="blog">
         <div class="header">
             <h2>Blog</h2>
             <div class="text_header">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -168,7 +168,7 @@
         <p class="button"><button type="button">VIEW MORE</button></p>
     </div>
 
-    <div class="part_6">
+    <div class="part_6" id="contact">
         <div class="header">
             <div class="top">
                 <div class="title">Contact </div>
