--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
                 <li><a href="Lessons/33/index.html">Site</a></li>
             </ul>
         </li>
+        <li>Lesson-34 <span>Web Storage</span>
+            <ul>
+                <li><a href="Lessons/34/index.html">Favorite</a></li>
+            </ul>
+        </li>
         <li>Lesson-35 <span>CSS animations</span>
             <ul>
                 <li><a href="Lessons/35/1/index.html">Cards 1</a></li>
